--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,7 @@ llvm_map_components_to_libnames(llvm_libs support core irreader)
 # Link against LLVM libraries
 target_link_libraries(aicc LLVM)
 
+find_package(CURL REQUIRED) 
+include_directories(${CURL_INCLUDE_DIR})
+target_link_libraries(aicc ${CURL_LIBRARIES})
+
